<resources>
    <string name="app_name">KortFri - School</string>
    <string name="headerTwo">We digitize your school certificates</string>
    <string name="Madewith">Made with</string>
    <string name="forKVT">for</string>
    <string name="Contactus">Contact us</string>
    <string name="Sendanemail">Email:</string>
    <string name="Terms">Terms</string>
    <string name="Picture">Picture</string>
    <string name="termsdescription1">This app will display your name, place of study and the validity of your digital student card. The app will display a photo of you if you choose to select one. The app will function as a student card and can be used as identification for services your place of study has an agreement with. First time usage requires you to be connected to WiFi or a cellular connection to download the information required to display the student card. This information will be stored locally on the app. KortFri does not take any responsibility for tickets, abuse or any usage that violates Norwegian or international laws. The photos uploaded on this app will be deleted from our database once you as a user are deleted from our systems. Users with admin-rights to the KortFri system have the possibility to delete users. Usually this will be the IT-responsible at? your place of study. The card will be valid for one semester at a time before it has to get updated, the spring semester reaches from 01.01-31.07 and the fall semester from 01.08-31.12.</string>
    <string name="termsdescription2">Are you 15 or older, and do you accept our terms of use?</string>
    <string name="termsdescription3">The card will be valid for one semester at a time before it has to get updated, the spring semester reaches from 01.01-31.07 and the fall semester from 01.08-31.12.</string>
    <string name="barcode">Barcode</string>
    <string name="studentcard">Student card</string>
    <string name="schoolcard">School card</string>
    <string name="closeSettings">Cancel</string>
    <string name="Loggout">Log out</string>
    <string name="moreInfo">Contact IT support to get yur code</string>
    <string name="LogginButton">Login</string>
    <string name="ValidTil">Valid until</string>
    <string name="digitsfail">Digits login failed</string>
    <string name="CancelBarCode">OK</string>
    <string name="GiveAccess">"Give the app access: settings/apps/KortFri/Storage"</string>
    <string name="setPicture">Set picture</string>
    <string name="chooise">Choice</string>
    <string name="updateProfile">Update</string>
    <string name="DenyPicture">You have already picked a photo</string>
    <string name="userUpdated">User updated</string>
    <string name="userNotUpdated">Could not update user</string>
    <string name="pictureNotAvailable">Picture not available</string>
    <string name="PictureNotUpdated">Could not update picture</string>
    <string name="wrongCode">Wrong code, contact IT support</string>
    <string name="youareadmin">You are admin, use the web app</string>
    <string name="contactIT">Contact IT support</string>
    <string name="signInDigiFail">Login failed</string>
    <string name="studentbevis">STUDENT CARD</string>
    <string name="companynameLong">Akademiet Trondheim</string>
    <string name="companyname">Aka trh</string>
    <string name="GyldigTil">Valid for </string>
    <string name="expired">EXPIRED</string>
    <string name="studentnumber">Student number</string>
    <string name="Barcode">Barcode:</string>
    <string name="Not">Invalid</string>
    <string name="yourPic">Your picture::</string>
    <string name="writepictureToken">Write picture code:</string>
    <string name="setPic">Set picture</string>
    <string name="back">Back</string>
    <string name="spring">Valid Spring</string>
    <string name="fall">Valid Fall</string>
    <string name="policy">Policy</string>
    <string name="whenvalidSpring">The semester receipt is valid from 01. Jan to 31. Jul</string>
    <string name="whenvalidFall">The semester receipt is valid from 01. Aug to 31. Des</string>
    <string name="acceptTerms">Click the "I accept" box to use the app</string>
    <string name="checkBox">I accept</string>
    <string name="updatePicture">Could not update picture</string>
    <string name="pictureMessage">You have to type in a code to change your profile picture. Your teacher or system administrator will give you this code.\n\nIMPORTANT INFORMATION: You can only use this code once!\n\nAfter using the code, only the system administrator can alter your profile picture. This is because the app is used as identification. Remember that using the identity of another person is illegal. (for example: Use your friends app to get a lower priced buss ticket.)</string>
    <string name="login">Login</string>
    <string name="infomasjon">Contact Information</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="signed_in">Write phone number</string>
    <string name="start_phone_auth">Send code</string>
    <string name="verify_phone_auth">Login</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Six digits code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="sign_out">Sign out</string>
    <string name="verification">verification successful</string>
    <string name="landskode">Country Code:</string>
    <string name="nonet">Connect to Wifi</string>
    <string name="Yes">Yes</string>
    <string name="Fri">Fri</string>
    <string name="godkjenn">Accept &amp; Continue</string>
    <string name="not_supported">Sorry, KortFri does not support your mobile</string>
    <string name="search_school">Search after your institution</string>
    <string name="mobil">90012345</string>
    <string name="set_profil_picture">Set profile picture</string>
    <string name="four_digits">Write in four-digit picture code</string>
    <string name="set_picture">Set a photo before you proceed</string>
    <string name="school_this">School</string>
    <string name="school_tis">School</string>
    <string name="school">Schools</string>
    <string name="your_picture">Your picture will look like this, press back to choose another picture or continue to accept</string>
    <string name="continue_to">Continue</string>
    <string name="pick_em">1. Press here to pick a picture</string>
    <string name="your_pictureprofil">Your profile picture</string>
    <string name="pick_em_two">2. Press here to crop your picture</string>
    <string name="set_your_picture">Set your profile picture</string>
    <string name="school_sertifivcat">School Certificate</string>
    <string name="student_sertificat">Student Certificate</string>
    <string name="vilkar2">KortFri \&apos; s Terms of Use and Privacy</string>
    <string name="Privacy">Privacy</string>

    <string name="vilkar">Press "Approve and Continue" to accept</string>
    <string name="Skrivinn">Write in phone number</string>
    <string name="Kort">KortFri</string>
    <string name="Autoriserer">Autentisering ...</string>
    <string name="Cancel">Cancel</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="Name">Name</string>
    <string name="School">School</string>
    <string name="Student_number">Student num.</string>
    <string name="Class">Class</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="ExpDate">Expiration date</string>
    <string name="Acr">Acronym</string>
    <string name="contactinformation">Contact information</string>
    <string name="allertMessage">STOP! If you are not pleased with the way the picture looks, go back and change it.</string>
    <string name="Callus">Phone:</string>
    <string name="contactschool">Contact</string>
    <string name="radio1">All</string>
    <string name="radio2">Schools</string>
    <string name="radio3">Member</string>
    <string name="membershipcard">Member Card</string>
    <string name="notmember">You are not a member</string>
    <string name="kortfriNorge">https://www.kortfri.no</string>
</resources>
