<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:background="@color/tw__solid_white"
    android:paddingTop="0dp">


    <TextView
        android:id="@+id/kortfrilogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/logobluecolor"
        android:layout_marginTop="213dp"
        android:fontFamily="sans-serif"
        android:text="@string/Kort"
        android:textSize="58sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kortfrilogo"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:textSize="12sp"
        android:layout_marginStart="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:text="@string/vilkar" />

    <TextView
        android:id="@+id/terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:fontFamily="sans-serif"
        android:textSize="28sp"
        android:onClick="open_schools"
        android:textColor="@color/logobluecolor"
        android:text="@string/godkjenn" />

    <TextView
        android:id="@+id/openHref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:textColor="@color/logobluecolor"
        android:text="@string/vilkar2" />
</RelativeLayout>
