<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.jorgenskevik.e_cardholders.TermsActivity">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/scrollView">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

    <Button
        android:text="@string/Terms"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/darkblue"
        android:id="@+id/button4"/>

    <TextView
        android:text="@string/termsdescription1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:textColor="#000000"
        android:paddingRight="4dp"
        android:paddingTop="4dp"
        android:textSize="14sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textColor="#000000"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="9dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/termsdescription3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp"
        android:text="@string/termsdescription2" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox" />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/darkblue"
            android:onClick="openCard"
            android:text="OK" />
    </TableLayout>
   </ScrollView>
</RelativeLayout>
