<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/valid2"
        android:id="@+id/view2">
    </View>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:text="@string/set_profil_picture"
        />

    <View
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

    <TextView
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_to"
        android:fontFamily="sans-serif"
        android:onClick="open_picture_view"
        android:textSize="20sp"
        android:layout_marginBottom="70dp"
        android:textColor="@color/logobluecolor"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView15" />

    <TextView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textColor="@color/logogreycolor"
        android:layout_alignBaseline="@+id/button_ok"
        android:layout_alignBottom="@+id/button_ok"
        android:layout_alignStart="@+id/textView15" />

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="left"
        android:text="@string/pictureMessage"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <View
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_below="@+id/information"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <View
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_below="@+id/textView14"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/four_digits" />

    <EditText
        android:id="@+id/code_picture"
        android:layout_width="wrap_content"
        android:hint="1547"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:maxLength="4"
        android:inputType="textNoSuggestions"
        android:imeOptions="actionSend"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView7"
        />

</RelativeLayout>