<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.jorgenskevik.e_cardholders.SecondActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kortfrilogo"
        android:scaleType="fitXY"
        android:id="@+id/kvtLOGO"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:alpha="0.7"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
       />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/greyblur"
        android:scaleType="fitXY"
        android:id="@+id/GREYBLUR"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:alpha="0.95" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/view2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/love"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/imageView3"
        android:layout_toRightOf="@+id/MadeWith"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:text="@string/Madewith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignLeft="@+id/ECARDHOLDER"
        android:layout_alignStart="@+id/ECARDHOLDER"
        android:id="@+id/MadeWith"
        android:layout_marginLeft="5dp"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:text="E-cardholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ECARDHOLDER"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/view2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/Sendanemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondheader"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_below="@+id/ECARDHOLDER"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:text="@string/Callus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:id="@+id/thirdheader"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/email"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/secondheader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="OpenMail"/>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/phone"
        android:id="@+id/imageView2"
        android:layout_below="@+id/thirdheader"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginTop="20dp"
        android:onClick="OpenPhone"/>

    <TextView
        android:text="@string/forKVT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forKVT"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_alignTop="@+id/MadeWith" />

    <Button
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView3"
        android:background="@color/tw__transparent"
        android:layout_centerHorizontal="true"
        android:onClick="openBrowser"
        android:layout_marginBottom="6dp"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        android:text="@string/kortfriNorge" />

</RelativeLayout>
